# pfeiffer-gauge

./: .gitignore  CMakeLists.txt  README.md  [unused] partition_table.csv
components/app_manager/: CMakeLists.txt
components/app_manager/include/: app_manager.h
components/app_manager/src/: app_manager.c
components/button_comp/: CMakeLists.txt
components/button_comp/include/: button_comp.h
components/button_comp/src/: button_comp.c
components/internal_temp_sensor/: CMakeLists.txt  internal_temp_sensor.c
components/internal_temp_sensor/include/: internal_temp_sensor.h
components/lvgl_display/: CMakeLists.txt  lvgl_display.c
components/lvgl_display/include/: lvgl_display.h
components/network_comp/: CMakeLists.txt
components/network_comp/include/: network_comp.h  nvs_storage.h  web_server.h  wifi_manager.h
components/network_comp/src/: network_comp.c  nvs_storage.c  web_server.c  wifi_manager.c
components/pressure_meas_comp/: CMakeLists.txt  pressure_meas_comp.c
components/pressure_meas_comp/include/: pressure_meas_comp.h
components/sensor_types/: CMakeLists.txt
components/sensor_types/include/: sensor_types.h
components/sensor_types/src/: sensor_types.c
components/serial_comp/: CMakeLists.txt
components/serial_comp/include/: serial_comp.h
components/serial_comp/src/: serial_comp.c
components/temp_meas_comp/: CMakeLists.txt
components/temp_meas_comp/include/: temp_meas_comp.h
components/time_manager/: CMakeLists.txt
components/uart_handler/: CMakeLists.txt
main/: CMakeLists.txt  pfeiffer_gauge.c
pc_utils/: py_serial_comm.py
(+5 files in other folders)
